[project]
name = "sprite-preview"
version = "1"
authors = [
    { name = "afellowcorn" },
]
requires-python = ">=3.10"
dependencies = [
    "black~=23.0",
    "cryptography~=42.0",
    "pgpy~=0.6",
    "platformdirs~=3.3",
    "pydantic>=2.12.0",
    "pygame-ce~=2.2",
    "pygame-gui~=0.6",
    "requests~=2.28",
    "strenum~=0.4",
    "tomli>=2.2.1",
    "ujson~=5.7",
]

[dependency-groups]
build = [
    "pillow~=9.5",
    "pyinstaller~=6.6",
    "setuptools~=67.7",
    "wheel~=0.40",
]
dev = [
    "pytest~=8.2",
]
test = [
    "pylint>=2.17.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]